# U

./: CMakeLists.txt  main.cpp
data/: constellations_neighbours.json  new_russia (1).geojson  new_russia.geojson  russia_neighbours.json
headers/: demo.h  game.h  list.h  player.h  player_window.h  str.h  subject.h  ui_player_window.h
src/: demo.cpp  game.cpp  player_window.cpp  str.cpp  subject.cpp
ui/: player_window.ui
